[package]
name = "wasc"
version = "2024.0.0"
edition = "2021"
description = "A C-like language compiler for WebAssembly with first-class support for references and tables"
license = "MIT"
repository = "https://github.com/richardanaya/wasc"

[dependencies]
webassembly = "0.10.0"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[features]
default = ["cli"]
cli = []
wasm = ["wasm-bindgen", "js-sys"]

[[bin]]
name = "wasc"
path = "src/bin/wasc.rs"
required-features = ["cli"]

[lib]
name = "wasc"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
